[package]
name = "naglfar"
version = "0.1.6"
authors = ["uint256_t <maekawatoshiki@github.com>"]

[dependencies]
app_units = "0.6.1"

clap = "2.31.2"

reqwest = "0.9.17"

rand = "0.5.0"

gtk= "0.4.1"
gdk = "0.8.0"
gdk-pixbuf = "0.4.0"
cairo-rs = "0.4.1"
pango = "0.4.0"
pangocairo = "0.5.0"
glib = "0.5.0"


[profile.dev]
codegen-units = 16

[profile.release]
codegen-units = 16
opt-level = 3
debug = false
lto = true
debug-assertions = false
panic = "unwind"
